I just made everything in one file and threw everything else in the old folder, I am going to run the entire script and have it gen a db in the vm instance, this is incredibly a-typical but you have to do what you have to do to solve a problem

--- a/SiteSensei/requirements.txt
+++ b/SiteSensei/requirements.txt
@@ -1,7 +1,12 @@
-flask
-playwright
-langchain
-fake-useragent
-python-dotenv
-langchain_community
-tldextract
+Flask==2.1.2
+Flask-Limiter
+httpx
+asyncio
+aiosqlite
+playwright==1.25.0
+mysql-connector-python==8.0.28
+boto3==1.24.12
+fake-useragent==0.1.11
+langchain-community
+pickle5
+faiss-cpu
